--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <title>Presente para Nane</title>
 </head>
 <body>
+    <audio autoplay>
+        <source src="./src/audios/teclado.mp3" type="audio/mpeg">
+        <source src="./src/audios/teclado.ogg" type="audio/ogg">
+        <source src="./src/audios/teclado.wav" type="audio/wav">
+    </audio>
     <p class="text">
         Clique no Presente ^-^
     </p>
@@ -30,9 +35,7 @@
             <p>
                 Feliz Aniversário, Cavaleira Nane!
             </p>
-            <span class="material-icons heart">
-                favorite
-            </span>
+            <img src="./src/images/heart.png" alt="Heart" class="heart">
         </div>
     </div>
 </body>
