--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Presente para Nane</title>
 </head>
 <body>
-    <audio class="audio">
+    <audio autoplay>
         <source src="./src/audios/teclado.mp3" type="audio/mpeg">
         <source src="./src/audios/teclado.ogg" type="audio/ogg">
         <source src="./src/audios/teclado.wav" type="audio/wav">
